Client2/client/src/App.css
/* Global styles */

@import url("https://fonts.googleapis.com/css2?family=Antonio:wght@100..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&family=PT+Sans+Narrow:wght@400;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap");

* {
  box-sizing: border-box;
}

body {
  font-family: "Oswald", serif;
  /* Font is next big thing */
  font-size: 1.125rem;
  font-optical-sizing: auto;
  font-weight: 300;
  color: #000000;
  background-color: #f6f0eb;
  margin: 0;
  padding: 0;
  display: flex;
  justify-content: center;
  align-items: center;
}

a {
  color: inherit; /* blue colors for links too */
  text-decoration: inherit; /* no underline */
}

a:hover {
  color: inherit;
}

h1 {
  font-size: clamp(4rem, 3vw + 1rem, 6rem);
}

h2 {
  font-size: clamp(1rem, 1vw + 0.5rem, 4rem);
}

h1,
h2,
h3 {
  font-family: "PT Sans Narrow", serif;
  font-weight: 600;
  font-style: normal;
}

p {
  font-size: clamp(0.9rem, 0.75vw + 0.75rem, 1.125rem);
}

img {
  max-width: 100%;
}

/* Wrapper for player for centering */
.player-wrapper {
  /* max-width: 600px; Adjust the width */
  /* margin: 0 auto;
  padding: 20px; */
  color: white;
}

/* Black gradient background */
.rhap_container {
  background: linear-gradient(
    135deg,
    #000000c1,
    #43434387
  ); /* Black gradient */
  color: #ffffff; /* White text/icons */
  padding: 20px; /* Larger padding for size */
  font-size: 1.2rem; /* Slightly larger text */
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4); /* Optional shadow */
}

.rhap_container * {
  color: #ffffff; /* Ensures all nested elements inherit white color */
}

/* Utilities */
.flex {
  display: flex;
  justify-content: space-around;
  align-items: center;
  margin: 10px 10px;
}

.min-width {
  min-width: 100px;
}

.iconlist {
  align-self: center;
  gap: 20px;
  width: clamp(4em, 8vw + 4rem, 14rem);
}

.hoverExpand {
  transition: transform 0.5s;
  transform: scale(1);
}

.hoverExpand:hover {
  position: relative;
  background-color: default;
  transform: scale(1.1);
}

/* Container for the app layout */
.container {
  display: grid;
  grid-template-columns: 1fr 5fr 5fr;
  width: 85vw;
  background: #fff;
  /* border-radius: 10px; */
}

.contact-form {
  background: #ffffff; /* Soft white background */
  padding: 25px;
  border-radius: 10px; /* Slightly rounded corners */
  box-shadow: none; /* Remove strong shadow to keep the form subtle */
  width: 100%;
  color: #333; /* Dark text for contrast */
  transition: all 0.3s ease-in-out;
  border: 1px solid #e0e0e0; /* Light border for a clean look */
}

/* Form Title */
.contact-form h2 {
  text-align: center;
  font-size: 1.5rem;
  margin-bottom: 20px;
  color: #333; /* Darker title text */
  font-weight: 600;
  letter-spacing: 0.5px;
}

/* Form Fields */
.contact-form input,
.contact-form textarea {
  width: 100%;
  padding: 12px 10px;
  margin: 10px 0;
  border: 1px solid #ddd; /* Light border */
  border-radius: 8px;
  background-color: #f9f9f9; /* Soft background for fields */
  font-size: 1rem;
  color: #555; /* Slightly lighter text */
  transition: all 0.3s ease;
}

.contact-form input:focus,
.contact-form textarea:focus {
  border-color: #ce9797; /* Blue focus border */
  background-color: #ffffff; /* White background on focus */
  outline: none;
}

/* Submit Button */
.contact-form button {
  width: 100%;
  padding: 12px;
  background-color: #000000; /* Calming blue */
  color: #fff;
  border: none;
  border-radius: 8px;
  font-size: 1.1rem;
  cursor: pointer;
  transition: background-color 0.3s ease;
  box-shadow: none;
}

.contact-form button:hover {
  background-color: #ce9797; /* Slightly darker blue on hover */
}

/* Textarea for message */
.contact-form textarea {
  height: 150px;
  resize: none;
}

/* Success or error message */
.contact-form .message {
  margin-top: 20px;
  font-size: 1.1rem;
  text-align: center;
}

/* Sidebar styles */
.sidebar {
  background: linear-gradient(
    to top,
    rgba(249, 223, 215, 1),
    rgba(248, 224, 215, 1),
    rgba(232, 195, 182, 1),
    rgba(218, 174, 165, 1),
    rgba(197, 158, 149, 1),
    rgba(166, 136, 125, 1)
  );
  padding: 0rem 2rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.social-icons {
  display: flex;
  flex-direction: column;
  gap: 6rem;
  align-content: space-around;
  /* align-items: ; */
  justify-content: space-around;
}

.social-icons a {
  /* padding: 10px 1px; */
  width: clamp(1em, 2.5vw + 0.1rem, 3.5em);
  transition: 0.25s;
}

.social-icons a:hover {
  color: #e6d4ca;
  transform: scale(1.2);
}

/* Main content area */

.main-content {
  height: 100dvh;
  overflow-y: scroll;

  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
  width: 80%;
  margin: auto auto;
  /* background: linear-gradient(
    to top,
    rgb(246, 234, 230),
    rgb(255, 255, 255),
    rgb(255, 255, 255),
    rgb(255, 255, 255),
    rgb(249, 249, 249),
    rgb(255, 255, 255)
  ); */
}

.main-content::-webkit-scrollbar {
  display: none;
}

.big-flow > * + * {
  margin-top: 4rem;
}

.Small-flow > * + * {
  margin-top: 2rem;
}

.main-content h1 {
  background-image: repeating-linear-gradient(
    35deg,
    rgba(248, 224, 215, 1),
    rgba(218, 174, 165, 1),
    rgb(242, 205, 192),
    rgba(197, 158, 149, 1),
    rgba(232, 195, 182, 1),
    rgba(197, 158, 149, 1),
    rgba(218, 174, 165, 1),
    rgba(197, 158, 149, 1)
  );
  /* color: lightpink; */
  color: transparent;
  background-clip: text;
}

.loop {
  animation: titleGradient 1s linear infinite;
}

@keyframes titleGradient {
  0% {
    background-position: 0 50%;
  }

  50% {
    background-position: 100% 0%;
  }

  100% {
    background-position: 0 50%;
  }
}

.cta-button {
  background: #2b2b2b;
  color: white;
  padding: 1em 2.5em;
  text-decoration: none;
  border-radius: 2.5px;
  font-size: 0.85em;
  transition: 0.3s;
}

.cta-button:hover {
  color: lightpink;
  border: inset 3px solid #a67a6c;
}

/* Concert images grid */
.concert-images {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
}

@media (width <= 1200px) {
}

.gap-1 {
  gap: 0.75rem;
}

.gap-2 {
  gap: 2rem;
}

.crop > * {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

/* Right panel with background image */
.right-panel {
  background: url("./assets/Saloni.png") center/cover no-repeat,
    linear-gradient(
      to top,
      rgba(249, 223, 215, 1),
      rgba(248, 224, 215, 1),
      rgba(232, 195, 182, 1),
      rgba(218, 174, 165, 1),
      rgba(197, 158, 149, 1),
      rgba(166, 136, 125, 1)
    );
  color: white;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  gap: 10px;
}

.right-panel h2 {
  font-size: 24px;
  margin: 0;
}

.right-panel p {
  margin: 0;
  font-size: 16px;
}

